# antar-clone

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  index.html  svg.html  svg_rsx.txt  tailwind.config.js
src/: colours.rs  components.rs  data.rs  lib.rs  main.rs  storage.rs
src/data/: chats.rs  personas.rs
src/pages/: chat.rs
src/system/: colour.rs  mod.rs
src/system/chat/: chatid.rs  message.rs  messages.rs  mod.rs  sender.rs
src/web/: colour.rs  components.rs  mod.rs
style/: tailwind.css
tests/app/: main.rs
tests/app/system/: mod.rs
tests/app/system/chat/: chat.rs  message.rs  messages.rs  mod.rs  sender.rs  test_structs.rs
tests/app/web/: mod.rs
tests/app/web/chat/: input.rs  message.rs  messages.rs  mod.rs
