[package]
name = "antar-clone"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "1ba6ca39e3f4d4fcd3b4e75e3a739d8c35514e5b" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus", rev = "1ba6ca39e3f4d4fcd3b4e75e3a739d8c35514e5b", features = ["serde"]}
dioxus-std = { git = "https://github.com/esimkowitz/dioxus-std/", branch = "storage-v4" }
gloo-storage = "0.3.0"
indexmap = { version = "2.0.2", features = ["serde"] }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = {git = "https://github.com/DioxusLabs/dioxus", rev = "1ba6ca39e3f4d4fcd3b4e75e3a739d8c35514e5b" }
uuid = { version = "1.4.1", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "1ba6ca39e3f4d4fcd3b4e75e3a739d8c35514e5b" }
uuid = { version = "1.4.1", features = [ "js", "v4", "fast-rng", "macro-diagnostics", "serde" ] }
