[package]
name = "let-me-talk"
version = "0.1.4"
edition = "2021"

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
gloo-storage = "0.3.0"
indexmap = { version = "2.0.2", features = ["serde"] }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
wasm-logger = "0.2.0"
uuid = { version = "1.4.1", features = [ "js", "v4", "fast-rng", "macro-diagnostics", "serde" ] }
leptos = { version = "0.5.2", features = ["csr", "nightly"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"
